test/success/integration/_succ_let_stmts_1.hs
main = do
       let x :: Int; y :: Int
       print "hello"