test/fail/integration/_fail_grammar_let_stmts_4.hs
main = do
       let x :: Int; x = lkj
       print "hello"